--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div class="main"><img src="./img/hyang_web.png" alt="hyang_web.png"></div>
-    <div class="banner"><a href="./img/hyang_web2.png" target="_blank"><img src="./img/hyang_banner_web.png" alt="hyang_web.png"></a></div>
+    <div class="banner"><a href="https://store.line.me/stickershop/product/23447973/ko" target="_blank"><img src="./img/hyang_banner_emoticon.png" alt="hyang_web.png"></a></div>
 </body>
 </html>
