--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="./hyang_style.css">
 </head>
 <body>
-    <div class="main"><img src="./img/hyang_web.png" alt="hyang_web.png"></div>
-    <div class="banner"><a href="https://store.line.me/stickershop/product/23447973/ko" target="_blank"><img src="./img/hyang_banner_emoticon.png" alt="hyang_web.png"></a></div>
+    <div class="main"><img src="./img/hyang_web_1.png" alt="hyang_web_1.png"></div>
+    <div class="banner"><a href="https://store.line.me/stickershop/product/23447973/ko" target="_blank">
+        <img src="./img/hyang_banner_emoticon.png" alt="hyang_web.png"></a></div>
+    <div class="web3"><img src="./img/hyang_web_3.png" alt="hyang_web_3.png"></div>
 </body>
 </html>
